--- a/scotgov/catalog/views/default/templates/home.html
+++ b/scotgov/catalog/views/default/templates/home.html
@@ -1,245 +1,269 @@
-<!-- <div> -->
-  <div class="row gn-row-main">
-    <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-      <div class="col-md-offset-1 col-md-10 col-lg-8 col-lg-offset-2">
+<div class="row gn-row-main hidden-print">
+  <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
+    <div class="col-sm-offset-6" data-gn-index-error-panel=""></div>
 
-        <div class="input-group gn-form-any">
-          <input type="text"
-                class="form-control input-lg"
-                autofocus=""
-                data-ng-model="homeAnyField"
-                data-ng-model-options="modelOptions"
-                placeholder="{{'anyPlaceHolder' | translate}}"
-                aria-label="{{'anyPlaceHolder' | translate}}"
-                data-ng-keyup="$event.keyCode == 13 && goToSearch(homeAnyField)"
-                data-typeahead="address for address in getAnySuggestions($viewValue)"
-                data-typeahead-template-url="../../catalog/templates/gn-typeahead-match.html"
-                data-typeahead-loading="anyLoading"
-                data-typeahead-min-length="1"
-                data-typeahead-focus-first="false"
-                data-typeahead-wait-ms="300"/>
-          <span class="input-group-btn">
-            <a class="btn btn-primary btn-lg"
-              type="button"
-              data-ng-href="#/search?title_OR_any={{homeAnyField}}">
-              <i class="fa fa-search"></i>
-              <span class="sr-only" data-translate="">search</span>
-            </a>
-          </span>
-        </div>
+    <div class="col-md-3 well well-sm" data-ng-if="serviceMetadataForPortal != null">
+      <p ng-bind-html="serviceMetadataForPortal.resourceAbstract | linky:'_blank'"></p>
 
-        <div data-translate="" class="search-over"
-            data-translate-values="{records: '{{searchInfo.count}}'}">searchOver</div>
+      <p
+        data-ng-if="serviceMetadataForPortal.contactForResource
+                     && serviceMetadataForPortal.contactForResource.length > 0"
+      >
+        <span data-translate="">forMoreInformationContact</span>
+        <span
+          data-ng-repeat="c in serviceMetadataForPortal.contactForResource"
+          data-ng-if="c.email != ''"
+        >
+          <a href="mailto:{{c.email}}">{{c.email}}</a>
+          <span data-ng-if="!$last">,</span>
+        </span>
+      </p>
+    </div>
 
+    <div
+      class="col-md-6"
+      data-ng-class="{'col-md-offset-3': serviceMetadataForPortal == null}"
+      data-ng-if="!showHealthIndexError"
+    >
+      <div class="input-group gn-form-any">
+        <input
+          type="text"
+          role="combobox"
+          class="form-control input-lg"
+          autofocus=""
+          autocomplete="off"
+          data-ng-model="homeAnyField"
+          data-ng-model-options="modelOptions"
+          placeholder="{{'anyPlaceHolder' | translate}}"
+          aria-label="{{'anyPlaceHolder' | translate}}"
+          data-ng-keyup="$event.keyCode == 13 && goToSearch(homeAnyField)"
+          data-typeahead="md.label as md.label for md in getAnySuggestions($viewValue, searchObj)"
+          data-typeahead-template-url="../../catalog/templates/gn-typeahead-match.html"
+          data-typeahead-loading="anyLoading"
+          data-typeahead-min-length="1"
+          data-typeahead-focus-first="false"
+          data-typeahead-wait-ms="300"
+        />
+        <span class="input-group-btn">
+          <a
+            class="btn btn-default btn-lg"
+            type="button"
+            data-ng-disabled="searchInfo.hits.total.value == 0"
+            data-ng-href="#/search?any={{homeAnyField}}"
+          >
+            <i class="fa fa-search"></i>
+            <span class="sr-only" data-translate="">search</span>
+          </a>
+        </span>
+      </div>
+
+      <div
+        data-translate=""
+        class="search-over"
+        data-translate-values="{records: '{{searchInfo.hits.total.value}}'}"
+      >
+        searchOver
       </div>
     </div>
   </div>
-  <!-- /.gn-row-main -->
+</div>
+<!-- /.gn-row-main -->
 
-  <form class="form-horizontal"
-        role="form"
-        data-ng-controller="gnsSearchTopEntriesController"
-        data-ng-search-form=""
-        data-runSearch="true"
-        data-ng-show="searchResults.records.length > 0">
-    <div class="row gn-top-records" role="row">
-      <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-        <h4 data-translate="">topMaps</h4>
+<!-- <div data-ng-if="showMosaic" data-gn-record-mosaic="-cl_status.key:obsolete" size="9" /> -->
 
-        <input type="hidden" name="_csrf" value="{{csrf}}"/>
-
-        <div data-ng-show="searchResults.records.length > 0"
-             data-gn-results-container=""
-             data-search-results="searchResults"
-             data-template-url="resultTemplate"></div>
-      </div>
-    </div>
-    <!-- /.gn-top-records -->
-  </form>
-
-  <div class="row" data-ng-show="searchInfo.count == 0">
+<form
+  data-ng-if="showMaps"
+  class="form-horizontal"
+  role="form"
+  data-ng-controller="gnsSearchTopEntriesController"
+  data-ng-search-form=""
+  data-runSearch="true"
+  data-ng-show="searchResults.records.length > 0"
+>
+  <div class="row gn-top-records" role="row">
     <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-      <div data-ng-show="searchInfo.count == 0"
-          class="col-md-offset-2 col-md-8 alert alert-warning">
-        <span data-translate="">noDataInCatalog</span>
-        <div data-gn-need-help="user-guide/quick-start/index.html"></div>
-      </div>
+      <h1 data-translate="">topMaps</h1>
+
+      <input type="hidden" name="_csrf" value="{{csrf}}" />
+
+      <div
+        data-ng-show="searchResults.records.length > 0"
+        data-gn-results-container=""
+        class="gn-info-list-blocks"
+        data-search-results="searchResults"
+        data-template-url="resultTemplate"
+      ></div>
     </div>
   </div>
+  <!-- /.gn-top-records -->
+</form>
 
+<div class="row" data-ng-show="searchInfo.hits.total.value == 0">
+  <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
+    <div class="col-md-offset-2 col-md-8 alert alert-warning">
+      <span data-translate="">noDataInCatalog</span>
+      <div data-gn-need-help="quick-start-home"></div>
+    </div>
+  </div>
+</div>
 
-  <div class="row gn-row-topics" data-ng-show="searchInfo.count > 0">
-    <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-      <div class="col-sm-12 col-md-9" data-ng-show="browse !== ''">
-        <h4>
+<div
+  class="gn-row-topics"
+  data-ng-show="searchInfo.hits.total.value > 0 && searchInfo.aggregations"
+>
+  <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
+    <div data-ng-show="homeFacet.list.length > 0">
+      <div class="row">
+        <h1 class="col-md-12">
           <span data-translate="">browseBy</span>
-          <span
-            data-ng-show="searchInfo.facet['inspireThemes'].length > 0 && searchInfo.facet['topicCats'].length > 0">
-            <label data-ng-show="searchInfo.facet['inspireThemes'].length > 0">
-              <input type="radio" name="browse" value="inspire" data-ng-model="browse"/>
-              <span data-translate="">inspireThemes</span>
-            </label>
-            <label data-ng-show="searchInfo.facet['topicCats'].length > 0">
-              <input type="radio" name="browse" value="topics" data-ng-model="browse"/>
-              <span data-translate="">topicCats</span>
-            </label>
-          </span>
+        </h1>
+        <div class="gn-topic-select col-md-12">
           <label
-            data-ng-show="searchInfo.facet['inspireThemes'].length > 0 && searchInfo.facet['topicCats'].length == 0"><span
-            data-translate="">inspireThemes</span></label>
-          <label
-            data-ng-show="searchInfo.facet['topicCats'].length > 0 && searchInfo.facet['inspireThemes'].length == 0"><span
-            data-translate="">topicCats</span></label>
-        </h4>
-
-  <!--       <div class="row">
-          <span id="chips-card" data-ng-repeat="(key, facet) in searchInfo.facet['topicCats']"
-                class="col-xs-6 col-sm-4 col-lg-3" data-ng-show="browse === 'topics'"> -->
-        <div class="row">
-          <span data-ng-repeat="(key, facet) in searchInfo.facet['topicCats']"
-                data-ng-show="browse === 'topics'"
-                class="col-xs-12 col-sm-6 col-md-4 chips-card">
-            <div class="badge-result badge-result-topic clearfix">
-              <a class="pull-left clearfix"
-                title="{{facet['@label']}}"
-                role="link"
-                data-ng-href="#/search?facet.q=topicCat%2F{{facet['@name']}}">
-                <span class="badge-icon badge-result-topic pull-left">
-                  <i class="fa fa-3x fa-table gn-icon gn-icon-{{facet['@name']}}"></i>
-                </span>
-                <span class="badge-text pull-left">
-                  <span class="gn-icon-label">{{facet['@label']}}</span>
-                </span>
-              </a>
-              <span class="badge pull-left">{{facet['@count']}}</span>
-            </div>
-          </span>
-          <span data-ng-repeat="(key, facet) in searchInfo.facet['inspireThemesURI'] track by $index"
-                data-ng-show="browse === 'inspire'"
-                class="col-xs-12 col-sm-6 col-md-4 chips-card">
-            <div class="badge-result badge-result-inspire clearfix">
-              <a class="pull-left clearfix bg-iti-{{facet['@name'].slice(facet['@name'].lastIndexOf('/')+1)}}"
-                title="{{facet['@label']}}"
-                data-ng-href="#/search?facet.q=inspireThemeURI%2F{{facet['@name'] | encodeURIComponent | encodeURIComponent}}">
-                <span class="badge-icon pull-left">
-                  <i class="fa fa-3x gn-icon iti-{{facet['@name'].slice(facet['@name'].lastIndexOf('/')+1)}}"></i>
-                </span>
-                <span class="badge-text pull-left">
-                  <span class="gn-icon-label">{{facet['@label']}}</span>
-                </span>
-              </a>
-              <span class="badge pull-left">{{facet['@count']}}</span>
-            </div>
-          </span>
+            data-ng-repeat="facetKey in homeFacet.list"
+            data-ng-init="agg = searchInfo.aggregations[facetKey]"
+            data-ng-show="agg.buckets.length > 0 && facetKey != homeFacet.lastKey"
+          >
+            <input
+              type="radio"
+              name="homeFacet"
+              class="sr-only"
+              data-ng-model="homeFacet.key"
+              data-ng-value="facetKey"
+            />
+            <span data-translate="">{{::('facet-' + facetKey) | facetKeyTranslator}}</span
+            >&nbsp;
+          </label>
         </div>
       </div>
-      <div class="col-sm-12 col-md-3" data-ng-show="searchInfo.facet['types'].length > 0">
-        <h4>
-          <span data-translate="">browseTypes</span>
-        </h4>
-        <div class="row">
-            <span data-ng-repeat="(key, facet) in searchInfo.facet['types']"
-                  data-ng-show="facet['@label']"
-                  class="col-xs-12 col-sm-6 col-md-12 chips-card">
-              <div class="badge-result badge-result-type pull-left">
-                <a title="{{facet['@label']}}"
-                  class="pull-left clearfix"
-                  data-ng-href="#/search?facet.q=type%2F{{facet['@name']}}">
-                  <span class="badge-icon pull-left">
-                    <i class="fa fa-3x fa-table gn-icon gn-icon-{{facet['@name']}}"></i>
-                  </span>
-                  <span class="badge-text pull-left">
-                    <span class="gn-icon-label">{{facet['@label']}}</span>
-                  </span>
-                </a>
-                <span class="badge pull-left">{{facet['@count']}}</span>
-              </div>
-            </span>
-        </div>
+      <div class="row">
+        <div
+          data-ng-if="homeFacet"
+          es-facet-cards="homeFacet.key"
+          data-home-facet="homeFacet"
+          data-search-info="searchInfo"
+          data-agg-config="aggConfig"
+        />
+      </div>
+    </div>
+    <div data-ng-show="searchInfo.aggregations[homeFacet.lastKey].buckets.length > 0">
+      <div class="row">
+        <h1 class="col-md-12" data-translate="">
+          {{('facet-' + homeFacet.lastKey) | facetKeyTranslator}}
+        </h1>
+      </div>
+      <div class="row">
+        <div
+          data-ng-if="homeFacet.lastKey"
+          es-facet-cards="homeFacet.lastKey"
+          data-home-facet="homeFacet"
+          data-search-info="searchInfo"
+          data-agg-config="aggConfig"
+        />
       </div>
     </div>
   </div>
-  <!-- /.gn-row-topics -->
+</div>
 
-  <div class="row gn-row-info"
-       data-ng-show="searchInfo.count > 0"
-       data-ng-class="{'gn-info-list-blocks': type === 'blocks' || type === undefined, 'gn-info-list-large': type === 'large', 'gn-info-list-small': type === 'small'}">
-    <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
-      <div class="col-sm-12">
+<!-- /.gn-row-topics -->
 
+<div
+  class="row gn-row-info"
+  data-ng-show="searchInfo.hits.total.value > 0"
+  data-ng-class="{'gn-info-list-blocks': type === 'blocks' || type === undefined, 'gn-info-list-large': type === 'large', 'gn-info-list-small': type === 'small'}"
+>
+  <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
+    <div class="col-sm-12">
       <!-- toggle buttons -->
-      <div id="info-toggle-buttons" class="btn-group pull-right" data-toggle="buttons">
-        <button id="btn-toggle-blocks" type="button" class="btn btn-default"
-                data-ng-click="toggleListType('blocks')"
-                data-ng-model="type"
-                data-ng-class="{'active': type === 'blocks' || type === undefined}"
-                aria-label="{{'listTypeBlocks' | translate}}">
+      <div
+        id="info-toggle-buttons"
+        class="btn-group pull-right hidden-print"
+        data-toggle="buttons"
+      >
+        <button
+          id="btn-toggle-blocks"
+          type="button"
+          class="btn btn-default"
+          data-ng-click="toggleListType('blocks')"
+          data-ng-model="type"
+          data-ng-class="{'active': type === 'blocks' || type === undefined}"
+          aria-label="{{'listTypeBlocks' | translate}}"
+        >
           <i class="fa fa-th-large" aria-hidden="true"></i>
         </button>
-        <button id="btn-toggle-large" type="button" class="btn btn-default"
-                data-ng-click="toggleListType('large')"
-                data-ng-model="type"
-                data-ng-class="{'active': type === 'large'}"
-                aria-label="{{'listTypeLarge' | translate}}">
+        <button
+          id="btn-toggle-large"
+          type="button"
+          class="btn btn-default"
+          data-ng-click="toggleListType('large')"
+          data-ng-model="type"
+          data-ng-class="{'active': type === 'large'}"
+          aria-label="{{'listTypeLarge' | translate}}"
+        >
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
-        <button id="btn-toggle-small" type="button" class="btn btn-default"
-                data-ng-click="toggleListType('small')"
-                data-ng-model="type"
-                data-ng-class="{'active': type === 'small'}"
-                aria-label="{{'listTypeSmall' | translate}}">
+        <button
+          id="btn-toggle-small"
+          type="button"
+          class="btn btn-default"
+          data-ng-click="toggleListType('small')"
+          data-ng-model="type"
+          data-ng-class="{'active': type === 'small'}"
+          aria-label="{{'listTypeSmall' | translate}}"
+        >
           <i class="fa fa-align-justify" aria-hidden="true"></i>
         </button>
       </div>
 
-      <tabset id="info-tabset pull-left" type="pills" justified="false" role="tablist">
-        <tab heading="{{'lastRecords' | translate}}"
-             role="tab"
-             active="infoTabs.lastRecords.active">
-          <form class="form-horizontal"
-                role="form"
-                data-ng-controller="gnsSearchLatestController"
-                data-ng-search-form=""
-                data-runSearch="true"
-                data-ng-show="searchResults.records.length > 0">
-              <input type="hidden" name="_csrf" value="{{csrf}}"/>
+      <tabset id="info-tabset" type="pills" justified="false" role="tablist">
+        <tab heading="{{'lastRecords' | translate}}" active="infoTabs.lastRecords.active">
+          <form
+            class="form-horizontal"
+            data-ng-controller="gnsSearchLatestController"
+            data-ng-search-form=""
+            data-runSearch="true"
+            data-ng-show="searchResults.records.length > 0"
+          >
+            <input type="hidden" name="_csrf" value="{{csrf}}" />
 
             <div data-gn-info-list=""></div>
           </form>
         </tab>
-        <tab heading="{{'preferredRecords' | translate}}"
-             role="tab"
-             active="infoTabs.preferredRecords.active">
-          <form class="form-horizontal"
-                role="form"
-                data-ng-controller="gnsSearchPopularController"
-                data-ng-search-form=""
-                data-runSearch="true"
-                data-ng-show="searchResults.records.length > 0">
-              <input type="hidden" name="_csrf" value="{{csrf}}"/>
+        <tab
+          heading="{{'preferredRecords' | translate}}"
+          active="infoTabs.preferredRecords.active"
+        >
+          <form
+            class="form-horizontal"
+            role="form"
+            data-ng-controller="gnsSearchPopularController"
+            data-ng-search-form=""
+            data-runSearch="true"
+            data-ng-show="searchResults.records.length > 0"
+          >
+            <input type="hidden" name="_csrf" value="{{csrf}}" />
             <div data-gn-info-list=""></div>
           </form>
         </tab>
-        <tab heading="{{'featuredUserSearches' | translate}}"
-             data-ng-if="isUserSearchesEnabled && displayFeaturedSearchesPanel"
-             role="tab"
-             active="infoTabs.featuredSearches.active">
+        <tab
+          heading="{{'featuredUserSearches' | translate}}"
+          data-ng-if="isUserSearchesEnabled && displayFeaturedSearchesPanel"
+          active="infoTabs.featuredSearches.active"
+        >
           <form class="form-horizontal">
             <div data-gn-user-searches-list></div>
           </form>
         </tab>
-        <tab heading="{{'Comments' | translate}}"
-             data-ng-if="isUserFeedbackEnabled"
-             active="infoTabs.commentsalt.active"
-             role="tab">
+        <tab
+          heading="{{'Comments' | translate}}"
+          data-ng-if="isUserFeedbackEnabled"
+          active="infoTabs.commentsalt.active"
+        >
           <form class="form-horizontal">
-            <div class="data-gn-userfeedbacklasthome"
-                  data-nb-of-comments="10"></div>
+            <div class="data-gn-userfeedbacklasthome" data-nb-of-comments="10"></div>
           </form>
         </tab>
       </tabset>
-      </div>
     </div>
   </div>
-  <!-- /.gn-row-info -->
-<!-- </div> -->
+</div>
+<!-- /.gn-row-info -->
