various changes to make GN4 work as intended

--- a/scotgov/catalog/style/srv_custom_style.less
+++ b/scotgov/catalog/style/srv_custom_style.less
@@ -83,8 +83,8 @@
 
 /* Accessibility fixes */
 
-a {
-  text-decoration: underline !important;
+ a {
+	text-decoration: none !important;
 }
 
 .navbar a, .sidebar a,  .title a, a.ng-binding , a.dropdown-toggle  {
@@ -92,3 +92,6 @@ a {
 }
 
 
+h2 {
+    word-break: normal !important;
+}
