--- a/scotgov/catalog/views/default/templates/footer.html
+++ b/scotgov/catalog/views/default/templates/footer.html
@@ -1,14 +1,15 @@
 <ul class="nav navbar-nav">
-  <li class="scottish-logo">
+  <!-- <li class="scottish-logo">
     <a href="https://www.gov.scot/" title="Scottish Government Website"><span>gov.scot</span></a>
-  </li>
+  </li> -->
   <li class="hidden-sm">
-    <a href="https://scottish-sdi-metadata-portal.readthedocs.io" target="_blank" title="Guidance">
-      <i class="fa fa-fw fa-github"></i>
     <a href="https://scottish-sdi-metadata-portal.readthedocs.io" target="_blank" title="Guidance"><span>Guidance</span></a>
-      <!-- <i class="fa fa-fw fa-github"></i>
-      <span data-translate="">github</span> -->
-    </a>
+      <!--
+	<i class="fa fa-fw fa-github"></i> 
+	<a href="https://scottish-sdi-metadata-portal.readthedocs.io" target="_blank" title="Guidance"><span>Guidance</span></a>
+      	<i class="fa fa-fw fa-github"></i>
+      	<span data-translate="">github</span> 
+      -->
   </li>
   <li class="hidden-sm">
     <a href="mailto:SSDI.Metadata@gov.scot?subject='SSDI%20Portal%20Contact'" target="_blank" title="Contact"><span>Contact</span></a>
