--- a/scotgov/catalog/views/default/less/gn_editor_default.less
+++ b/scotgov/catalog/views/default/less/gn_editor_default.less
@@ -623,3 +623,7 @@ form.gn-editor.gn-indent-bluescale {
   /*}*/
 	display:none;
 }
+
+.md-type-n.valid-inspire-status-1 {
+  display: none !important;
+}
