--- a/scotgov/catalog/style/gn_metadata.less
+++ b/scotgov/catalog/style/gn_metadata.less
@@ -511,4 +511,57 @@ ul.container-list {
       line-height: 1.7em;
     }
   }
+  ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 0;
+    li.gn-contact-card {
+      list-style-type: none;
+      text-align: left;
+      padding: 10px;
+      border-radius: 3px;
+      &:hover,
+      &:focus {
+        background-color: #f8f8f8;
+      }
+      [gn-popover-anchor] {
+        &:hover,
+        &:focus {
+          color: #000;
+        }
+      }
+      .col-md-6,
+      .col-md-4 {
+        padding-left: 0px;
+        padding-right: 0px;
+      }
+      .gn-contact-card-org {
+        padding: 5px 0;
+        margin-bottom: 10px;
+      }
+      .gn-contact-card-role {
+        font-weight: bolder;
+      }
+      .gn-contact-card-org-group {
+        font-weight: bolder;
+      }
+      .gn-contact-card-group-role {
+        padding: 5px;
+      }
+    }
+  }
+}
+
+[data-gn-circle-letter-icon],
+[gn-circle-letter-icon] {
+  svg {
+    circle {
+      stroke-width: 0;
+      stroke: @brand-primary;
+    }
+    text {
+      fill: #333333;
+    }
+  }
 }
