--- a/scotgov/catalog/style/srv_custom_style.less
+++ b/scotgov/catalog/style/srv_custom_style.less
@@ -1,6 +1,4 @@
 /* Define custom node style here */
-.body {}
-
 
 .scottish-logo {
     width: 220px;
@@ -94,4 +92,6 @@
 
 h2 {
     word-break: normal !important;
+    font-size: 1.5em;
+    font-weight: bold;
 }
