minor style correction

--- a/scotgov/catalog/views/default/less/gn_editor_default.less
+++ b/scotgov/catalog/views/default/less/gn_editor_default.less
@@ -112,7 +112,7 @@
       margin: 0px 0 0 7px;
     }
     .control-label {
-      color: #333333;
+      color: #333;
       font-size: 12px;
       font-weight: bold;
     }
@@ -640,4 +640,8 @@ form.gn-editor.gn-indent-bluescale {
 
 gn-md-type-inspire-validation-widget {
   display: none;
+}
+
+.navbar-default .navbar-text {
+  color: #fff;
 }
