datepicker layout fix

--- a/scotgov/catalog/views/default/less/gn_editor_default.less
+++ b/scotgov/catalog/views/default/less/gn_editor_default.less
@@ -645,3 +645,29 @@ gn-md-type-inspire-validation-widget {
 .navbar-default .navbar-text {
   color: #fff;
 }
+
+// temporal extent fixes
+.dropdown-align-fix {
+  vertical-align: bottom !important;
+}
+
+.dropmenu-margin-fix {
+  margin-top: -50% !important;
+}
+
+
+.width-fix-100 {
+  min-width: 100% !important;
+}
+
+.width-fix-80, .number-width-fix {
+  min-width: 80% !important;
+}
+
+.width-fix-50 {
+  min-width: 50% !important;
+}
+
+.width-fix-20 {
+  min-width: 20% !important;
+}
