footer, dtechtive page and datahub configs

--- a/scotgov/catalog/views/default/templates/footer.html
+++ b/scotgov/catalog/views/default/templates/footer.html
@@ -19,13 +19,19 @@
     <a href="https://scottish-sdi-metadata-portal.readthedocs.io/en/latest/accessibility.html" target="_blank" title="Accessibility"><span>Accessibility</span></a>
   </li>
   <li class="hidden-sm">
-    <a target="_blank" href="../../../zeppelin" target="_blank" title="Analytics (admin only)"><span>Analytics (admin only)</span></a>
+    <a href="../../../zeppelin" target="_blank" title="Analytics (admin only)"><span>Analytics (admin only)</span></a>
   </li>
   <li class="hidden-sm">
-      <a target="_blank" href="../../../geohealthcheck" target="_blank" title="Service Monitoring"><span>Service Monitoring</span></a>
+      <a href="../../../geohealthcheck" target="_blank" title="Service Monitoring"><span>Service Monitoring</span></a>
   </li>
   <li>
     <a href="../../doc/api" target="_blank" title="{{'learnTheApi' | translate}}">API</a>
+  </li>
+  <li class="hidden-sm">
+    <a href="../../api/collections" target="_blank" title="OGC-API"><span>OGC-API</span></a>
+  </li>
+  <li class="hidden-sm">
+    <a href="../../../datahub" target="_blank" title="Datahub"><span>Datahub</span></a>
   </li>
   <li gn-static-pages-list-viewer data-section="footer" data-language="{{lang}}" />
 </ul>
