restore INSPIRE widget

--- a/geonetwork/catalog/views/default/less/gn_editor_default.less
+++ b/geonetwork/catalog/views/default/less/gn_editor_default.less
@@ -625,7 +625,7 @@ form.gn-editor.gn-indent-bluescale {
 
 // inspire
 // md type widget (used only in editor for now)
-/*.fa-inspire {
+.fa-inspire {
   background: url('../catalog/views/default/images/inspire.png');
   background-repeat: no-repeat;
   background-size: 16px 16px;
@@ -636,11 +636,11 @@ form.gn-editor.gn-indent-bluescale {
     content: "";
 
   }
-}*/
-
-gn-md-type-inspire-validation-widget {
-  display: none;
 }
+
+/* gn-md-type-inspire-validation-widget {
+  display: none;
+}*/
 
 .navbar-default .navbar-text {
   color: #000;
