add fix for word-breaks

--- a/geonetwork/catalog/style/gn_metadata.less
+++ b/geonetwork/catalog/style/gn_metadata.less
@@ -425,7 +425,8 @@ ul.view-outline a[disabled] {
 }
 
 a {
-  word-break: keep-all;
+  word-break: keep-all !important;
+  overflow-wrap: break-word !important;
 }
 
 ul.md-value-list > li {
