minor styling correction

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -91,6 +91,10 @@ a:focus {
     text-decoration: underline;
 }
 
+.gn-row-topics .gn-topic .panel-body a:hover {
+    text-decoration: none !important;
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-weight: bold !important;
     color: #58595B;
