add NRW font, make minimap hidden by default, strip down advanced search options

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -1,11 +1,48 @@
 /* Define custom node style here */
 @font-face {
-    font-family: "";
-    src: url("../catalog/style/.tff") format("truetype");
+    font-family: "Gotham Round";
+    src: url("../catalog/style/GothamRnd-Light.otf") format("opentype");
+    font-weight: lighter;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Gotham Round";
+    src: url("../catalog/style/GothamRnd-LightIta.otf") format("opentype");
+    font-weight: lighter;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Gotham Round";
+    src: url("../catalog/style/GothamRnd-Book.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Gotham Round";
+    src: url("../catalog/style/GothamRnd-BookIta.otf") format("opentype");
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: "Gotham Round";
+    src: url("../catalog/style/GothamRnd-Bold.otf") format("opentype");
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Gotham Round";
+    src: url("../catalog/style/GothamRnd-BoldIta.otf") format("opentype");
+    font-weight: bold;
+    font-style: italic;
 }
 
 body {
-    font-family: "", Arial;
+    font-family: "Gotham Round", Arial;
     word-break: keep-all;
     word-wrap: normal;
     line-break: normal;
