--- a/nrw/geonetwork/catalog/style/gn_topics_default.less
+++ b/nrw/geonetwork/catalog/style/gn_topics_default.less
@@ -17,6 +17,7 @@
 @nrw-water-blue: #0092a6;
 @nrw-land-green: #055445;
 @nrw-wildlife-green: #58a333;
+@nrw-manmade-grey: #575756;
 
 // ----- topics
 .gn-row-topics {
@@ -140,18 +141,23 @@
     }
   }
 
+  &.bg-iti-lu,
+  &.bg-iti-am,
+  &.bg-iti-lc,
+  &.bg-iti-nz,
+  &.bg-iti-au,
+  &.bg-iti-ge,
+  &.bg-iti-ad,
   &.bg-iti-bu,
-  &.bg-iti-15,
+  &.bg-iti-el,
+  &.bg-iti-so,
   &.bg-iti-cp,
-  &.bg-iti-6,
-  &.bg-iti-gg,
-  &.bg-iti-2,
-  &.bg-iti-gn,
-  &.bg-iti-3,
+  &.bg-iti-tn,
+  &.bg-iti-mr,
   &.bg-iti-oi,
-  &.bg-iti-12,
+  &.bg-iti-gn,
   &.bg-iti-rs,
-  &.bg-iti-1 {
+  &.bg-iti-br {
     .panel {
       background: @nrw-land-green;
       border-color: darken(@nrw-land-green, 10%);
@@ -163,18 +169,9 @@
     }
   }
 
-  &.bg-iti-am,
-  &.bg-iti-24,
-  &.bg-iti-au,
-  &.bg-iti-4,
-  &.bg-iti-hh,
-  &.bg-iti-18,
-  &.bg-iti-lu,
-  &.bg-iti-17,
-  &.bg-iti-pd,
-  &.bg-iti-23,
-  &.bg-iti-su,
-  &.bg-iti-14 {
+  &.bg-iti-sd,
+  &.bg-iti-hb,
+  &.bg-iti-ps {
     .panel {
       background: @nrw-wildlife-green;
       border-color: darken(@nrw-wildlife-green, 10%);
@@ -186,20 +183,10 @@
     }
   }
 
-  &.bg-iti-ad,
-  &.bg-iti-5,
+  &.bg-iti-hy,
+  &.bg-iti-of,
   &.bg-iti-af,
-  &.bg-iti-22,
-  &.bg-iti-el,
-  &.bg-iti-10,
-  &.bg-iti-er,
-  &.bg-iti-33,
-  &.bg-iti-pf,
-  &.bg-iti-21,
-  &.bg-iti-tn,
-  &.bg-iti-7,
-  &.bg-iti-us,
-  &.bg-iti-19 {
+  &.bg-iti-sr {
     .panel {
       background: @nrw-water-blue;
       border-color: darken(@nrw-water-blue, 10%);
@@ -211,18 +198,9 @@
     }
   }
 
-  &.bg-iti-ac,
-  &.bg-iti-26,
-  &.bg-iti-ef,
-  &.bg-iti-20,
-  &.bg-iti-hy,
-  &.bg-iti-8,
   &.bg-iti-mf,
-  &.bg-iti-27,
-  &.bg-iti-of,
-  &.bg-iti-28,
-  &.bg-iti-sr,
-  &.bg-iti-29 {
+  &.bg-iti-pf,
+  &.bg-iti-ac {
     .panel {
       background: @nrw-air-blue;
       border-color: darken(@nrw-air-blue, 10%);
@@ -234,43 +212,19 @@
     }
   }
 
-  &.bg-iti-br,
-  &.bg-iti-30,
-  &.bg-iti-hb,
-  &.bg-iti-31,
-  &.bg-iti-lc,
-  &.bg-iti-11,
-  &.bg-iti-ps,
-  &.bg-iti-9,
-  &.bg-iti-sd,
-  &.bg-iti-32 {
+  &.bg-iti-ef,
+  &.bg-iti-us,
+  &.bg-iti-hh,
+  &.bg-iti-er {
     .panel {
-      background: @nrw-land-green;
-      border-color: darken(@nrw-land-green, 10%);
+      background: @nrw-manmade-grey;
+      border-color: darken(@nrw-manmade-grey, 10%);
       &:hover,
       .panel-footer {
-        border-color: darken(@nrw-land-green, 10%);
-        background-color: darken(@nrw-land-green, 5%);
+        border-color: darken(@nrw-manmade-grey, 10%);
+        background-color: darken(@nrw-manmade-grey, 5%);
       }
     }
   }
 
-  &.bg-iti-ge,
-  &.bg-iti-13,
-  &.bg-iti-mr,
-  &.bg-iti-34,
-  &.bg-iti-nz,
-  &.bg-iti-25,
-  &.bg-iti-so,
-  &.bg-iti-16 {
-    .panel {
-      background: @nrw-wildlife-green;
-      border-color: darken(@nrw-wildlife-green, 10%);
-      &:hover,
-      .panel-footer {
-        border-color: darken(@nrw-wildlife-green, 10%);
-        background-color: darken(@nrw-wildlife-green, 5%);
-      }
-    }
-  }
 }
