--- a/geonetwork/catalog/views/default/templates/recordView/technical.html
+++ b/geonetwork/catalog/views/default/templates/recordView/technical.html
@@ -22,21 +22,6 @@
       </li>
     </ul>
   </section>
-
-  <div
-    data-ng-if="mdView.current.record.cl_maintenanceAndUpdateFrequency.length > 0"
-    class="gn-margin-bottom flex-row"
-  >
-    <span class="badge badge-rounded" title="{{'updateFrequency' | translate}}">
-      <i class="fa fa-fw fa-language"></i>
-    </span>
-    <div>
-      <h3 data-translate="">updateFrequency</h3>
-      <p data-ng-repeat="c in mdView.current.record.cl_maintenanceAndUpdateFrequency">
-        {{c.default}}
-      </p>
-    </div>
-  </div>
 </div>
 
 <div>
@@ -45,7 +30,8 @@
     data-ng-if="(user.canEditRecord(mdView.current.record)
                  && viewConfig.internalThesaurus
                  && viewConfig.internalThesaurus.indexOf(key) !== -1)
-                || highlightedThesaurus.indexOf(key) === -1"
+                || highlightedThesaurus.indexOf(key) === -1
+                && !['Integrated Public Sector Vocabulary', 'SeaDataNet Parameter Discovery Vocabulary', 'NRW SMNR Vocabulary', 'GEMET - INSPIRE themes, version 1.0'].includes(t.title)"
     class="gn-margin-bottom flex-row"
   >
     <span class="badge badge-rounded">
@@ -77,7 +63,31 @@
       </ul>
     </div>
   </div>
+</div>
 
+<div>
+  <!-- Parent dataset -->
+  <div
+  data-ng-if="mdView.current.record.related.parent.length > 0"
+  class="gn-margin-bottom flex-row"
+>
+  <span class="badge badge-rounded" title="{{parentRecord | translate}}">
+    <i class="fa fa-fw fa-link"></i>
+  </span>
+  <div>
+    <h3 data-translate="">parentRecord</h3>
+    <div
+      data-ng-if="mdView.current.record.related.uuids"
+      data-gn-related="mdView.current.record"
+      data-user="user"
+      data-alt-title="{{'memberOf' | translate}}"
+      data-layout="title"
+      data-types="parent"
+    />
+  </div>
+</div>
+
+<div>
   <!-- Language-->
   <div
     data-ng-if="mdView.current.record.resourceLanguage.length > 0"
@@ -95,13 +105,15 @@
       </ul>
     </div>
   </div>
+</div>
 
+<div>
   <div ng-include="'../../catalog/views/default/templates/recordView/categories.html'" />
 
   <div
     data-ng-if="mdView.current.record.cl_classification > 0"
     class="gn-margin-bottom flex-row"
-  >
+    >
     <span class="badge badge-rounded" title="{{'classification' | translate}}">
       <i class="fa fa-fw fa-tags"></i>
     </span>
