--- a/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
@@ -110,20 +110,22 @@
 
 <div class="row gn-section gn-section-{{mdView.current.record.resourceType[0]}}">
 
-  <!-- contact information -->
-  <div class="col-md-8 gn-record gn-break">
-    <div ng-include="'../../catalog/views/default/templates/recordView/contact.html'" />
-  </div>
-
-  <!-- metadata information-->
-  <div class="col-md-4">
-    <h2 data-translate="">metadataInformation</h2>
-    <div class="col-md-12">
-      <div class="gn-page-break-avoid" ng-include="'../../catalog/views/default/templates/recordView/metadata.html'" />
+  <div class="row">
+    <!-- contact information -->
+    <div class="col-md-8 gn-record gn-break">
+      <div ng-include="'../../catalog/views/default/templates/recordView/contact.html'" />
     </div>
 
-    <div class="col-md-12 hidden-print">
-      <div ng-include="'../../catalog/views/default/templates/recordView/share.html'" />
+    <!-- metadata information-->
+    <div class="col-md-4">
+      <h2 data-translate="">metadataInformation</h2>
+      <div class="col-md-12">
+        <div class="gn-page-break-avoid" ng-include="'../../catalog/views/default/templates/recordView/metadata.html'" />
+      </div>
+
+      <div class="col-md-12 hidden-print">
+        <div ng-include="'../../catalog/views/default/templates/recordView/share.html'" />
+      </div>
     </div>
   </div>
 
