--- a/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
@@ -74,8 +74,7 @@
     <div data-ng-if="mdView.current.record.lineage
                   || mdView.current.record.sourceDescription
                   || mdView.current.record.supplementalInformation"
-      class="row"
-      >
+      class="row">
 
       <div ng-include="'../../catalog/views/default/templates/recordView/lineage.html'" />
 
