--- a/geonetwork/catalog/views/default/templates/home.html
+++ b/geonetwork/catalog/views/default/templates/home.html
@@ -1,3 +1,10 @@
+<div class="row" data-ng-if="showMosaic">
+  <div class="col-md-offset-2 col-md-8 alert alert-danger text-center">
+    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+    <span data-translate="">plannedOutage</span>
+  </div>
+</div>
+
 <div class="row gn-row-main hidden-print">
   <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
     <div class="col-sm-offset-6" data-gn-index-error-panel=""></div>
@@ -80,7 +87,6 @@
   </div>
 </div>
 <!-- /.gn-row-main -->
-<div data-ng-if="showMosaic" data-gn-record-mosaic="-cl_status.key:obsolete" size="9" />
 
 <form
   data-ng-if="showMaps"
