fix indexing and display of constraints

--- a/nrw/geonetwork/catalog/views/default/templates/recordView/constraints.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/constraints.html
@@ -1,5 +1,5 @@
 <div data-ng-if="mdView.current.record.accessConstraints"
-  class="gn-margin-bottom row"
+  class="row"
   >
   <div>
     <h2 data-translate="">accessConstraints</h2>
@@ -11,7 +11,7 @@
 </div>
 
 <div data-ng-if="mdView.current.record.useConstraints"
-  class="gn-margin-bottom row"
+  class="row"
   >
   <h2 data-translate="">useConstraints</h2>
   <div>
