--- a/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/type-dataset.html
@@ -39,15 +39,13 @@
           <h3>{{'licence' | translate}}</h3>
         </div>
         <ul class="gn-label-list">
-          <li style="background-color: #fff;">
-            <a data-gn-search-filter-popup-link="licence"
-              data-filter="mdView.current.record.licence">{{mdView.current.record.licence}}</a>
+          <li data-ng-repeat="l in [].concat(mdView.current.record.licence)" style="background-color: #fff;">
+            <a data-gn-search-filter-popup-link="licence" data-filter="l">{{l}}</a>
           </li>
         </ul>
-        <img data-ng-if="mdView.current.record.licence === 'Open Government Licence' ||
-                            mdView.current.record.licence === 'Open Government Licence (OGL)'"
-            class="gn-margin-bottom gn-margin-top"
-            data-ng-src="/geonetwork/srv/api/logos/ogl-symbol.png" alt="Open Government Licence">
+        <img data-ng-if="([].concat(mdView.current.record.licence) | filter: filterLicence).length > 0"
+          class="gn-margin-bottom gn-margin-top"
+          data-ng-src="/geonetwork/srv/api/logos/ogl-symbol.png" alt="Open Government Licence">
       </div>
       <div data-ng-if="mdView.current.record.geom">
         <div class="gn-margin-bottom flex-row">
