make social media links display nicely in the footer

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -248,3 +248,14 @@ span.gn-user-name.ng-binding :hover {
 .ellipsis:after {
     display: none;
 }
+
+.gn-bottom-bar {
+    position:relative;
+    height: unset;
+}
+
+.social-media-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
