include subject line in hyperlinks

--- a/nrw/geonetwork/catalog/views/default/templates/footer.html
+++ b/nrw/geonetwork/catalog/views/default/templates/footer.html
@@ -33,7 +33,7 @@ data-language="{{lang}}"
 <!-- Add Contact Us link for NRW -->
 <ul class="nav navbar-nav">
     <li>
-        <a href="mailto:opendata@cyfoethnaturiolcymru.gov.uk"
+        <a href="mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry"
         target="_blank"
         title="{{'contactUs' | translate}}"
         aria-label="{{'contactUs' | translate}}"
