apply translation to Contact Us link in the footer. Fixes NRW-371/169309

--- a/nrw/geonetwork/catalog/views/default/templates/footer.html
+++ b/nrw/geonetwork/catalog/views/default/templates/footer.html
@@ -37,7 +37,9 @@ data-language="{{lang}}"
         target="_blank"
         title="{{'contactUs' | translate}}"
         aria-label="{{'contactUs' | translate}}"
-        >Contact Us</a>
+        data-translate=""
+        data-language="{{lang}}"
+        >contactUs</a>
     </li>
 </ul>
 
