--- a/nrw/geonetwork/catalog/views/default/templates/recordView/constraints.html
+++ b/nrw/geonetwork/catalog/views/default/templates/recordView/constraints.html
@@ -1,25 +1,33 @@
-<div data-ng-if="mdView.current.record.accessConstraints || mdView.current.record.limitationsPublicAccess"
+<div data-ng-if="mdView.current.record.accessConstraintsRestrictionType || mdView.current.record.accessConstraintsText || mdView.current.record.limitationsPublicAccessLink"
   class="row">
   <div>
-    <h2 data-translate="">accessConstraints</h2>
-    <div data-ng-if="mdView.current.record.accessConstraints">
+    <h2 data-translate="">limitationsPublicAccess</h2>
+    <div data-ng-if="mdView.current.record.accessConstraintsRestrictionType">
       <h3 data-translate="">restrictionType</h3>
-      <p data-translate="">{{mdView.current.record.accessConstraints}}</p>
+      <p data-translate="">{{mdView.current.record.accessConstraintsRestrictionType}}</p>
     </div>
-    <div data-ng-if="mdView.current.record.limitationsPublicAccess">
+    <div data-ng-if="mdView.current.record.accessConstraintsText">
+      <h3 data-translate="">accessConstraints</h3>
+      <p data-translate="">{{mdView.current.record.accessConstraintsText}}</p>
+    </div>
+    <div data-ng-if="mdView.current.record.limitationsPublicAccessLink">
       <h3 data-translate="">otherConstraints</h3>
-      <a href="{{mdView.current.record.limitationsPublicAccessLink}}" target="_blank">{{mdView.current.record.limitationsPublicAccess}}</a>
+      <a href="{{mdView.current.record.limitationsPublicAccessLink}}" target="_blank" data-translate="">{{mdView.current.record.limitationsPublicAccessLinkText}}</a>
     </div>
   </div>
 </div>
 
-<div data-ng-if="mdView.current.record.useConstraints || mdView.current.record.attributionStatement"
+<div data-ng-if="mdView.current.record.useConstraintsType || mdView.current.record.useConstraintsText || mdView.current.record.attributionStatement"
   class="row">
   <h2 data-translate="">useConstraints</h2>
   <div>
-    <div data-ng-if="mdView.current.record.useConstraints">
+    <div data-ng-if="mdView.current.record.useConstraintsType">
       <h3 data-translate="">useConstraintsType</h3>
-      <p data-translate="">{{mdView.current.record.useConstraints}}</p>
+      <p data-translate="">{{mdView.current.record.useConstraintsType}}</p>
+    </div>
+    <div data-ng-if="mdView.current.record.useConstraintsText">
+      <h3 data-translate="">otherConstraints</h3>
+      <p data-translate="">{{mdView.current.record.useConstraintsText}}</p>
     </div>
     <div data-ng-if="mdView.current.record.attributionStatement">
       <h3 data-translate="">attributionStatement</h3>
