remove link behind logo image in toolbar and get rid of unnecessary padding to retain the same navbar layout across all pages. Fixes accessibility issue in SUPPORT-20232/NRW bug ref 169618

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -259,3 +259,7 @@ span.gn-user-name.ng-binding :hover {
     flex-wrap: wrap;
     align-items: center;
 }
+
+[ng-app="gn_admin"] .gn-top-bar .navbar-collapse {
+    padding-left: 15px;
+}
