--- a/nrw/geonetwork/catalog/components/toolbar/partials/menu-sitename.html
+++ b/nrw/geonetwork/catalog/components/toolbar/partials/menu-sitename.html
@@ -1,10 +1,11 @@
 <li class="clearfix hidden-xs" data-ng-show="gnCfg.mods.home.enabled" role="menuitem">
     <!-- Remove link to homepage for NRW accessibility -->
+    <!-- Set the alt attribute to be empty for NRW accessibility - previously set to {{'siteLogo' | translate}} -->
     <img
         class="pull-left"
         style="margin-top: 12px; max-height: 30px;"
         data-ng-hide="{{gnCfg.mods.header.isLogoInHeader}}"
-        alt="{{'siteLogo' | translate}}"
+        alt=""
         data-ng-src="{{gnUrl}}../images/logos/{{info['node/id'] || info['system/site/siteId']}}.png?random{{info['system/site/lastUpdate']}}"
       />
     <a class="pull-left gn-logo-link" data-gn-active-tb-item="{{gnCfg.mods.home.appUrl}}">
