--- a/nrw/geonetwork/catalog/views/default/templates/index.html
+++ b/nrw/geonetwork/catalog/views/default/templates/index.html
@@ -75,8 +75,10 @@
   </div>
 </main>
 
+<!-- Add role attribute for accessibility purposes -->
 <footer
   class="navbar navbar-default gn-bottom-bar"
   data-ng-show="gnCfg.mods.footer.enabled"
   data-ng-include="'../../catalog/views/default/templates/footer.html'"
+  role="navigation"
 ></footer>
