--- a/nrw/geonetwork/catalog/components/toolbar/partials/top-toolbar.html
+++ b/nrw/geonetwork/catalog/components/toolbar/partials/top-toolbar.html
@@ -1,6 +1,7 @@
 <!-- Removed class to reduce padding - previously set to data-ng-class="fluidHeaderLayout ? 'container-fluid' : 'container'" -->
 <div>
-    <div class="navbar-header">
+    <!-- Add role attribute for accessibility purposes -->
+    <div class="navbar-header" role="menubar">
       <a
         class="hidden-sm hidden-md hidden-lg pull-left gn-logo-link"
         data-gn-active-tb-item="{{gnCfg.mods.home.appUrl}}"
@@ -39,6 +40,7 @@
       </button>
     </div>
     <div id="navbar" class="navbar-accessible navbar-collapse collapse">
+      <!-- Add role attribute for accessibility purposes -->
       <ul class="nav navbar-nav gn-menu-xs" role="menu">
         <li data-ng-repeat-start="menu in toolbarMenu"></li>
         <li data-ng-if="menu == 'gn-site-name-menu'" gn-site-name-menu=""></li>
@@ -53,18 +55,21 @@
           language="{{lang}}"
           section="top"
         ></li>
+        <!-- Add role attribute for accessibility purposes -->
         <ul
           data-ng-if="menu == 'gn-static-pages-list-viewer'"
           gn-static-pages-list-viewer=""
           language="{{lang}}"
           section="top"
           class="nav navbar-nav gn-menu-xs"
+          role="menu"
         ></ul>
         <li data-ng-repeat-end=""></li>
       </ul>
       <div class="navbar-right">
-        <ul gn-signin-menu=""></ul>
-        <div gn-languages-menu=""></div>
+        <!-- Add role attribute for accessibility purposes -->
+        <ul gn-signin-menu="" role="menu"></ul>
+        <div gn-languages-menu="" role="menu"></div>
       </div>
     </div>
   </div>
