changed get-next-identifier link to kibana rather than zeppelin

--- a/nrw/geonetwork/catalog/templates/editor/new-metadata-horizontal.html
+++ b/nrw/geonetwork/catalog/templates/editor/new-metadata-horizontal.html
@@ -101,7 +101,7 @@
               <span data-translate="">nextAvailableIdentifier</span>
             </div>
             <div class="panel-body">
-                <iframe src="../../../zeppelin/#/notebook/2JUB3Q81X/paragraph/paragraph_1712588955407_13758961?asIframe" style="border:none; height: 100%; width: 100%;" />
+                <iframe src="../../dashboards/goto/b622a350-fd6d-11ee-b30f-53f8ed1d3666?auth_provider_hint=anonymous1" style="border:none; height: 100%; width: 100%;"/>
                 <p data-translate="" class="gn-margin-top">nextAvailableIdentifierGuidance</p>
             </div>
         </div>
